--- a/source/renderer/app/i18n/locales/defaultMessages.json
+++ b/source/renderer/app/i18n/locales/defaultMessages.json
@@ -8313,7 +8313,7 @@
       },
       {
         "defaultMessage": "!!!https://cardano.ideascale.com/a/index",
-        "description": "learnMoreLinkUrl for voting registration steps",
+        "description": "Learn more link url for registration steps",
         "end": {
           "column": 3,
           "line": 76
@@ -8326,17 +8326,31 @@
         }
       },
       {
+        "defaultMessage": "!!!https://iohk.zendesk.com/hc/en-us/articles/900004448046",
+        "description": "Learn more link url for ended registration",
+        "end": {
+          "column": 3,
+          "line": 82
+        },
+        "file": "source/renderer/app/components/voting/VotingInfo.js",
+        "id": "voting.info.learnMoreLinkUrlForEndedRegistration",
+        "start": {
+          "column": 40,
+          "line": 77
+        }
+      },
+      {
         "defaultMessage": "!!!Download the Catalyst Voting app on your smartphone",
         "description": "bottomContentTitle for voting registration steps",
         "end": {
           "column": 3,
-          "line": 81
+          "line": 87
         },
         "file": "source/renderer/app/components/voting/VotingInfo.js",
         "id": "voting.info.bottomContentTitle",
         "start": {
           "column": 22,
-          "line": 77
+          "line": 83
         }
       },
       {
@@ -8344,13 +8358,13 @@
         "description": "bottomContentDescription for voting registration steps",
         "end": {
           "column": 3,
-          "line": 87
+          "line": 93
         },
         "file": "source/renderer/app/components/voting/VotingInfo.js",
         "id": "voting.info.bottomContentDescription",
         "start": {
           "column": 28,
-          "line": 82
+          "line": 88
         }
       },
       {
@@ -8358,13 +8372,13 @@
         "description": "bottomContentDescription for ended registration",
         "end": {
           "column": 3,
-          "line": 93
+          "line": 99
         },
         "file": "source/renderer/app/components/voting/VotingInfo.js",
         "id": "voting.info.bottomContentDescriptionForEndedRegistration",
         "start": {
           "column": 48,
-          "line": 88
+          "line": 94
         }
       },
       {
@@ -8372,13 +8386,13 @@
         "description": "checkboxLabel for voting registration steps",
         "end": {
           "column": 3,
-          "line": 98
+          "line": 104
         },
         "file": "source/renderer/app/components/voting/VotingInfo.js",
         "id": "voting.info.checkboxLabel",
         "start": {
           "column": 17,
-          "line": 94
+          "line": 100
         }
       },
       {
@@ -8386,13 +8400,13 @@
         "description": "Button Label for voting registration steps",
         "end": {
           "column": 3,
-          "line": 103
+          "line": 109
         },
         "file": "source/renderer/app/components/voting/VotingInfo.js",
         "id": "voting.info.buttonLabel",
         "start": {
           "column": 15,
-          "line": 99
+          "line": 105
         }
       },
       {
@@ -8400,13 +8414,13 @@
         "description": "\"androidAppButtonUrl\" for the Catalyst voting app",
         "end": {
           "column": 3,
-          "line": 109
+          "line": 115
         },
         "file": "source/renderer/app/components/voting/VotingInfo.js",
         "id": "voting.info.androidAppButtonUrl",
         "start": {
           "column": 23,
-          "line": 104
+          "line": 110
         }
       },
       {
@@ -8414,13 +8428,13 @@
         "description": "\"appleAppButtonUrl\" for the Catalyst voting app",
         "end": {
           "column": 3,
-          "line": 115
+          "line": 121
         },
         "file": "source/renderer/app/components/voting/VotingInfo.js",
         "id": "voting.info.appleAppButtonUrl",
         "start": {
           "column": 21,
-          "line": 110
+          "line": 116
         }
       }
     ],
