[DDW-566] Implement "Voting registration is over" screen (#2428)
* [DDW-566] Implement voting registration end screen

* [DDW-566] Update changelog

* [DDW-566] Update date time formatting

* [DDW-566] Update learn more link for ended registration

* [DDW-566] Update voting registration end date config value

--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -602,12 +602,19 @@
   "voting.info.androidAppButtonUrl": "https://play.google.com/store/apps/details?id=io.iohk.vitvoting",
   "voting.info.appleAppButtonUrl": "https://apps.apple.com/in/app/catalyst-voting/id1517473397",
   "voting.info.bottomContentDescription": "Catalyst Fund3に有権者登録を行うためには、まずAndroidまたはiOSのスマートフォンに<b>Catalyst Voting</b>アプリをダウンロードする必要があります。",
+  "voting.info.bottomContentDescriptionForEndedRegistration": "Project Catalyst Fund3の提案に投票するには、AndroidまたはiOSのスマートフォンに<b>Catalyst Voting</b>アプリをダウンロードする必要があります。",
   "voting.info.bottomContentTitle": "スマートフォンにCatalyst Votingアプリをダウンロードします",
   "voting.info.buttonLabel": "有権者登録をする",
   "voting.info.checkboxLabel": "Catalyst Votingアプリをインストールしました",
+  "voting.info.descriptionForEndedRegistration": "<p>Project Catalyst Fund3の有権者登録は完了しました。投票スナップショットは<b>日本時間{snapshotDate}</b>に実施されます。</p><p>Fund3への有権者登録を済ませている場合は、<b>日本時間{castStartDate}から{castEndDate}</b>の間に、携帯デバイスのCatalyst Votingアプリを使用して投票することができます。</p><p>Fund4の登録は<b>日本時間{newRegistrationStartDate}</b>に開始されます。</p>",
   "voting.info.heading": "Fund3の有権者登録をする",
+  "voting.info.headingForEndedRegistration": "Fund3の有権者登録は終了しました",
   "voting.info.learnMoreLinkLabel": "もっと知る",
+  "voting.info.learnMoreLinkLabelForEndedRegistration": "Fund3についてよくある質問",
   "voting.info.learnMoreLinkUrl": "https://cardano.ideascale.com/a/index",
+  "voting.info.learnMoreLinkUrlForEndedRegistration": "https://iohk.zendesk.com/hc/ja/articles/900004448046",
+  "voting.info.learnMoreNextLabel": "をご覧ください。",
+  "voting.info.learnMorePreviousLabel": "詳細は",
   "voting.info.noWallets.createWalletButtonLabel": "ウォレットを作成する",
   "voting.info.noWallets.headLine": "現在Shelley対応のウォレットがないため、Fund3の有権者登録はできません。",
   "voting.info.noWallets.instructions": "ウォレットを作成し、そこに{minVotingFunds} ADA以上を移してから（または既存の資金入りウォレットを復元してから）、改めてここで有権者登録を行ってください。",
