--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -602,12 +602,19 @@
   "voting.info.androidAppButtonUrl": "https://play.google.com/store/apps/details?id=io.iohk.vitvoting",
   "voting.info.appleAppButtonUrl": "https://apps.apple.com/in/app/catalyst-voting/id1517473397",
   "voting.info.bottomContentDescription": "To register to vote for Catalyst Fund3 you first need to download the <b>Catalyst Voting</b> app on your Android or iOS smartphone.",
+  "voting.info.bottomContentDescriptionForEndedRegistration": "To cast your vote on Project Catalyst Fund3 proposals, you need to download the <b>Catalyst Voting</b> app on your Android or iOS smartphone.",
   "voting.info.bottomContentTitle": "Download the Catalyst Voting app on your smartphone",
   "voting.info.buttonLabel": "Register to vote",
   "voting.info.checkboxLabel": "I have installed the Catalyst Voting app",
+  "voting.info.descriptionForEndedRegistration": "<p>Voting registration for Project Catalyst Fund3 has been completed. The voting snapshot took place on <b>{snapshotDate}</b>.</p><p>If you have registered to vote on Fund3, you can cast your vote using the Catalyst Voting mobile app between <b>{castStartDate}</b> and <b>{castEndDate}</b>.</p><p>Fund4 registration will start on <b>{newRegistrationStartDate}</b>.</p>",
   "voting.info.heading": "Register to vote on Fund3",
+  "voting.info.headingForEndedRegistration": "Fund3 Voting Registration Ended",
   "voting.info.learnMoreLinkLabel": "Learn more",
+  "voting.info.learnMoreLinkLabelForEndedRegistration": "Fund3 FAQs",
   "voting.info.learnMoreLinkUrl": "https://cardano.ideascale.com/a/index",
+  "voting.info.learnMoreLinkUrlForEndedRegistration": "https://iohk.zendesk.com/hc/en-us/articles/900004448046",
+  "voting.info.learnMoreNextLabel": "for more information.",
+  "voting.info.learnMorePreviousLabel": "Please read the",
   "voting.info.noWallets.createWalletButtonLabel": "Create wallet",
   "voting.info.noWallets.headLine": "Voting registration for Fund3 is not available as you currently do not have any Shelley-compatible wallets.",
   "voting.info.noWallets.instructions": "Create a new wallet and transfer a minimum of {minVotingFunds} ADA (or restore an existing wallet with funds), then return here to register for voting.",
