[DDW-570] UI part

--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -1042,6 +1042,9 @@
   "wallet.settings.utxos.tooltipLast": "<b>{walletUtxosAmount}</b> UTXOs containing <br /> <b>{walletAmount}</b> ADA",
   "wallet.settings.walletPublicKey": "Wallet public key",
   "wallet.settings.walletPublicKeyShowInstruction": "To show wallet public key click \"Reveal\" button",
+  "wallet.settings.walletPublicKeyDialog.title": "Reveal wallet public key",
+  "wallet.settings.walletPublicKeyDialog.description": "Please enter your spending password to reveal your wallet’s public key.",
+  "wallet.settings.walletPublicKeyDialog.button": "Reveal wallet public key",
   "wallet.statusMessages.activeRestore": "The balance and transaction history of this wallet is {percentage}% synced with the blockchain.",
   "wallet.summary.assets.tokenSendButton": "Send",
   "wallet.summary.assets.tokensTitle": "Tokens",
