--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -1042,6 +1042,9 @@
   "wallet.settings.utxos.tooltipLast": "<b>{walletAmount}</b>以上のADAを含む<br />UTXO数は<b>{walletUtxosAmount}</b>",
   "wallet.settings.walletPublicKey": "ウォレット公開鍵",
   "wallet.settings.walletPublicKeyShowInstruction": "ウォレット公開鍵を表示するには[表示]ボタンをクリックしてください",
+  "wallet.settings.walletPublicKeyDialog.title": "ウォレットの公開鍵を表示する",
+  "wallet.settings.walletPublicKeyDialog.description": "ウォレットの公開鍵を表示するには送信時パスワードを入力してください。",
+  "wallet.settings.walletPublicKeyDialog.button": "ウォレットの公開鍵を表示する",
   "wallet.statusMessages.activeRestore": "ウォレットの残高とトランザクション履歴はブロックチェーンと{percentage}%同期されました。",
   "wallet.summary.assets.tokenSendButton": "送金",
   "wallet.summary.assets.tokensTitle": "トークン",
