--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -494,6 +494,9 @@
   "staking.stakePools.rankingSelectWalletEnd": "を使用して委任する量を設定します。",
   "staking.stakePools.rankingSelectWalletStart": "または、",
   "staking.stakePools.search.delegatingListTitle": "現在委任しているステークプール",
+  "staking.stakePools.search.gridIconTooltip": "グリッドビュー",
+  "staking.stakePools.search.gridRewardsIconTooltip": "グリッドリワードビュー",
+  "staking.stakePools.search.listIconTooltip": "リストビュー",
   "staking.stakePools.search.listTitle": "ステークプール ({pools})",
   "staking.stakePools.search.searchInputPlaceholder": "ステークプールを検索する",
   "staking.stakePools.tableHeader.cost": "費用 (ADA)",
