[DDW-589] Update Ada input popover text copy for various cases

--- a/source/renderer/app/i18n/locales/defaultMessages.json
+++ b/source/renderer/app/i18n/locales/defaultMessages.json
@@ -10105,17 +10105,31 @@
         }
       },
       {
-        "defaultMessage": "!!!A minimum of {minimumAda} ADA needs to be sent to this receiver since you are sending other assets.",
+        "defaultMessage": "!!!This transaction requires a minimum of {minimumAda} ADA to be sent.",
         "description": "Tooltip for the min ADA required value in the wallet send form.",
         "end": {
           "column": 3,
           "line": 76
         },
         "file": "source/renderer/app/components/wallet/send-form/messages.js",
-        "id": "wallet.send.form.minAdaRequiredTooltip",
+        "id": "wallet.send.form.minAdaRequiredWithAssetTooltip",
         "start": {
-          "column": 25,
+          "column": 34,
           "line": 70
+        }
+      },
+      {
+        "defaultMessage": "!!!A minimum of {minimumAda} ADA needs to be sent with every transaction.",
+        "description": "Tooltip for the min ADA required value in the wallet send form.",
+        "end": {
+          "column": 3,
+          "line": 83
+        },
+        "file": "source/renderer/app/components/wallet/send-form/messages.js",
+        "id": "wallet.send.form.minAdaRequiredWithNoAssetTooltip",
+        "start": {
+          "column": 36,
+          "line": 77
         }
       },
       {
@@ -10123,13 +10137,13 @@
         "description": "Label for the \"description\" text area in the wallet send form.",
         "end": {
           "column": 3,
-          "line": 82
+          "line": 89
         },
         "file": "source/renderer/app/components/wallet/send-form/messages.js",
         "id": "wallet.send.form.description.label",
         "start": {
           "column": 20,
-          "line": 77
+          "line": 84
         }
       },
       {
@@ -10137,13 +10151,13 @@
         "description": "Hint in the \"description\" text area in the wallet send form.",
         "end": {
           "column": 3,
-          "line": 87
+          "line": 94
         },
         "file": "source/renderer/app/components/wallet/send-form/messages.js",
         "id": "wallet.send.form.description.hint",
         "start": {
           "column": 19,
-          "line": 83
+          "line": 90
         }
       },
       {
@@ -10151,13 +10165,13 @@
         "description": "Label for the reset button on the wallet send form.",
         "end": {
           "column": 3,
-          "line": 92
+          "line": 99
         },
         "file": "source/renderer/app/components/wallet/send-form/messages.js",
         "id": "wallet.send.form.reset",
         "start": {
           "column": 20,
-          "line": 88
+          "line": 95
         }
       },
       {
@@ -10165,13 +10179,13 @@
         "description": "Label for the send button on the wallet send form.",
         "end": {
           "column": 3,
-          "line": 97
+          "line": 104
         },
         "file": "source/renderer/app/components/wallet/send-form/messages.js",
         "id": "wallet.send.form.send",
         "start": {
           "column": 19,
-          "line": 93
+          "line": 100
         }
       },
       {
@@ -10179,13 +10193,13 @@
         "description": "Error message shown when invalid amount was entered.",
         "end": {
           "column": 3,
-          "line": 102
+          "line": 109
         },
         "file": "source/renderer/app/components/wallet/send-form/messages.js",
         "id": "wallet.send.form.errors.invalidAmount",
         "start": {
           "column": 17,
-          "line": 98
+          "line": 105
         }
       },
       {
@@ -10193,13 +10207,13 @@
         "description": "Error message shown when invalid transaction title was entered.",
         "end": {
           "column": 3,
-          "line": 108
+          "line": 115
         },
         "file": "source/renderer/app/components/wallet/send-form/messages.js",
         "id": "wallet.send.form.errors.invalidTitle",
         "start": {
           "column": 16,
-          "line": 103
+          "line": 110
         }
       },
       {
@@ -10207,13 +10221,13 @@
         "description": "Syncing transactions message shown during async wallet restore in the wallet send form.",
         "end": {
           "column": 3,
-          "line": 115
+          "line": 122
         },
         "file": "source/renderer/app/components/wallet/send-form/messages.js",
         "id": "wallet.send.form.syncingTransactionsMessage",
         "start": {
           "column": 30,
-          "line": 109
+          "line": 116
         }
       },
       {
@@ -10221,13 +10235,13 @@
         "description": "Label for the \"Calculating fees\" message for amount input field.",
         "end": {
           "column": 3,
-          "line": 121
+          "line": 128
         },
         "file": "source/renderer/app/components/wallet/send-form/messages.js",
         "id": "wallet.send.form.calculatingFeesLabel",
         "start": {
           "column": 24,
-          "line": 116
+          "line": 123
         }
       },
       {
@@ -10235,13 +10249,13 @@
         "description": "Syncing wallet label on the send tokens form.",
         "end": {
           "column": 3,
-          "line": 126
+          "line": 133
         },
         "file": "source/renderer/app/components/wallet/send-form/messages.js",
         "id": "wallet.send.form.syncingWallet",
         "start": {
           "column": 17,
-          "line": 122
+          "line": 129
         }
       }
     ],
