[DDW-589] Update Ada input popover text copy resources

--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -935,8 +935,8 @@
   "wallet.send.form.errors.invalidTitle": "Please enter a title with at least 3 characters.",
   "wallet.send.form.estimatedFee.label": "Estimated fees",
   "wallet.send.form.minAdaRequired": "a minimum of {minimumAda} ADA required",
-  "wallet.send.form.minAdaRequiredWithAssetTooltip": "This transaction requires a minimum of {minimumAda} ADA to be sent.",
-  "wallet.send.form.minAdaRequiredWithNoAssetTooltip": "A minimum of {minimumAda} ADA needs to be sent with every transaction.",
+  "wallet.send.form.minAdaRequiredWithAssetTooltip": "The transaction requires a minimum of {minimumAda} ADA.",
+  "wallet.send.form.minAdaRequiredWithNoAssetTooltip": "The transaction needs to include at least {minimumAda} ADA.",
   "wallet.send.form.of.label": "of",
   "wallet.send.form.receiver.label": "Receiver",
   "wallet.send.form.receiver.placeholder": "Paste an address",
