--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -493,7 +493,11 @@
   "staking.stakePools.rankingSelectWallet": "select a wallet",
   "staking.stakePools.rankingSelectWalletEnd": "to set the amount you intend to delegate.",
   "staking.stakePools.rankingSelectWalletStart": "Or",
+  "staking.stakePools.search.clearTooltip": "Clear",
   "staking.stakePools.search.delegatingListTitle": "Staking pools you are delegating to",
+  "staking.stakePools.search.gridIconTooltip": "Grid View",
+  "staking.stakePools.search.gridRewardsIconTooltip": "Grid Rewards View",
+  "staking.stakePools.search.listIconTooltip": "List View",
   "staking.stakePools.search.listTitle": "Stake pools ({pools})",
   "staking.stakePools.search.searchInputPlaceholder": "Search stake pools",
   "staking.stakePools.tableHeader.cost": "Cost (ADA)",
