--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -927,6 +927,8 @@
   "wallet.send.confirmationDialog.submit": "送金する",
   "wallet.send.confirmationDialog.title": "トランザクションの確認",
   "wallet.send.confirmationDialog.totalLabel": "合計",
+  "wallet.send.confirmationDialog.unformattedAmountLabel": "書式なしの金額",
+  "wallet.send.confirmationDialog.unformattedAmountMessage": "トランザクションの確認中、ネイティブトークンの金額はハードウェアウォレットデバイス上に書式化されずに（少数位なしの金額で）表示されます。",
   "wallet.send.form.asset.adaLabel": "ADA",
   "wallet.send.form.asset.label": "トークン",
   "wallet.send.form.button.addAssetButtonLabel": "+ トークンを追加する",
