--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -928,7 +928,8 @@
   "wallet.send.confirmationDialog.title": "トランザクションの確認",
   "wallet.send.confirmationDialog.totalLabel": "合計",
   "wallet.send.confirmationDialog.unformattedAmountLabel": "書式なしの金額",
-  "wallet.send.confirmationDialog.unformattedAmountMessage": "トランザクションの確認中、ネイティブトークンの金額はハードウェアウォレットデバイス上に書式化されずに（少数位なしの金額で）表示されます。",
+  "wallet.send.confirmationDialog.unformattedAmountMessageForHardwareWallets": "!!!The native token unformatted amount (amount without decimal places) will be displayed on the hardware wallet device during transaction confirmation.",
+  "wallet.send.confirmationDialog.unformattedAmountMessageForSoftwareWallets": "!!!The native token unformatted amount (amount without decimal places) will be displayed on the hardware wallet device during transaction confirmation.",
   "wallet.send.form.asset.adaLabel": "ADA",
   "wallet.send.form.asset.label": "トークン",
   "wallet.send.form.button.addAssetButtonLabel": "+ トークンを追加する",
