--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -928,8 +928,8 @@
   "wallet.send.confirmationDialog.title": "Confirm transaction",
   "wallet.send.confirmationDialog.totalLabel": "Total",
   "wallet.send.confirmationDialog.unformattedAmountLabel": "unformatted amount",
-  "wallet.send.confirmationDialog.unformattedAmountMessageForHardwareWallets": "!!!The native token unformatted amount (amount without decimal places) will be displayed on the hardware wallet device during transaction confirmation.",
-  "wallet.send.confirmationDialog.unformattedAmountMessageForSoftwareWallets": "!!!The native token unformatted amount (amount without decimal places) will be displayed on the hardware wallet device during transaction confirmation.",
+  "wallet.send.confirmationDialog.unformattedAmountMessageForHardwareWallets": "<p>Native assets may specify a number of decimal places, as defined in the Cardano token registry. Daedalus uses this information to format the amount that is being sent in the transaction.</p><p>The native token unformatted amount is the amount without these decimal places. Please ensure that you verify both amounts, as some wallet software may not yet use the Cardano token registry.</p><p>The native token unformatted amount will be displayed on the hardware wallet device during transaction confirmation.</p>",
+  "wallet.send.confirmationDialog.unformattedAmountMessageForSoftwareWallets": "<p>Native assets may specify a number of decimal places, as defined in the Cardano token registry. Daedalus uses this information to format the amount that is being sent in the transaction.</p><p>The native token unformatted amount is the amount without these decimal places. Please ensure that you verify both amounts, as some wallet software may not yet use the Cardano token registry.</p>",
   "wallet.send.form.asset.adaLabel": "Ada",
   "wallet.send.form.asset.label": "Token",
   "wallet.send.form.button.addAssetButtonLabel": "+ Add a token",
