[DDW-594] Enable sending of native tokens for hardware wallets (#2446)
* Introduce Native Tokens for HW

* [DDW-594] Enable sending of native tokens for hardware wallets

* [DDW-594] Fix font weights

* [DDW-594] Remove unnecessary logs and comments

* [DDW-594] Transform coin selection assets to camelCase, improve preparation of tokens bundle and eslint fixes

* [DDW-594] Coin selection error handling improvement to cover minimum required ADA while sending tokens alongs with

* [DDW-594] Fix Flow issues

* [DDW-594] Always show unformatted amounts in the confirmation dialog

* [DDW-594] Update min required Ledger Cardano App version

* [DDW-594] Fixes send-form border color on dark themes

* [DDW-594] Fixes HW transaction creation and bump of minimal Trezor version to 2.3.6

* [DDW-594] Add display of asset name in ASCII

* [DDW-594] Adds tooltip content

* [DDW-594] Fix hardware wallets NT serialization ordering

Co-authored-by: Tomislav Horaček <tomislav.horacek@thespian.hr>

--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -927,6 +927,9 @@
   "wallet.send.confirmationDialog.submit": "送金する",
   "wallet.send.confirmationDialog.title": "トランザクションの確認",
   "wallet.send.confirmationDialog.totalLabel": "合計",
+  "wallet.send.confirmationDialog.unformattedAmountLabel": "書式なしの金額",
+  "wallet.send.confirmationDialog.unformattedAmountMessageForHardwareWallets": "<p>ネイティブ資産は、Cardanoトークンレジストリーで定義される通り、小数点以下の桁数を指定できます。Daedalusはこの情報を使用し、トランザクションで送信された金額を書式化します。</p><p>ネイティブトークンの書式なしの金額とは、この少数位を持たない金額です。まだCardanoトークンレジストリーを使用していないウォレットソフトウェアもあるため、必ず両方の金額を確認してください。</p><p>ネイティブトークンの書式なしの金額は、トランザクションの確認中にハードウェアウォレットデバイスに表示されます。</p>",
+  "wallet.send.confirmationDialog.unformattedAmountMessageForSoftwareWallets": "<p>ネイティブ資産は、Cardanoトークンレジストリーで定義される通り、小数点以下の桁数を指定できます。Daedalusはこの情報を使用し、トランザクションで送信された金額を書式化します。</p><p>ネイティブトークンの書式なしの金額とは、この少数位を持たない金額です。まだCardanoトークンレジストリーを使用していないウォレットソフトウェアもあるため、必ず両方の金額を確認してください。</p>",
   "wallet.send.form.asset.adaLabel": "ADA",
   "wallet.send.form.asset.label": "トークン",
   "wallet.send.form.button.addAssetButtonLabel": "+ トークンを追加する",
